--- a/event/templates/event/cogether_subscribe_email.html
+++ b/event/templates/event/cogether_subscribe_email.html
@@ -6,13 +6,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
+	<title>Co.gether</title>
 </head>
 <body>
 	<img src="https://cogether1.s3-ap-northeast-1.amazonaws.com/custom/cogether_logo%404x.png" alt="대표이미지">
 	<h1>안녕하세요. Code + Together! cogether입니다. 💌💌💌</h1>
 
-	<h1>Cogether에서 국내 개발 행사 일정을 공유합니다.🖥️🖥️</h1>
+	<h1>Cogether에서 국내 개발 행사 일정을 알려드립니다.🖥️🖥️</h1>
 
 	<h1>🔥많은 관심 부탁드려요.🔥</h1>
 
